cmake_minimum_required(VERSION 3.23)
project(cxx_boost)

set(CMAKE_CXX_STANDARD 14)
find_package(Boost 1.76)
find_package(Threads REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})
add_executable(cxx_boost main.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC Threads::Threads)
